# video_editor

./: CMakeLists.txt  README.md  video_editor.pro
include/: helpers.h  overlaybase.h  overlayfactory.h  overlaynumber.h  overlayrect.h  overlayslider.h  thumbnailitem.h  videomodel.h  videothread.h
qml/: AbortableProgressPopup.qml  MainView.qml  PositionSpiboxes.qml  VideoOverlayItem.qml  VideoOverlaysPopup.qml  VideoPreview.qml  VideoView.qml  main.qml  qml.qrc
src/: main.cpp  overlaybase.cpp  overlayfactory.cpp  overlaynumber.cpp  overlayrect.cpp  overlayslider.cpp  thumbnailitem.cpp  videomodel.cpp  videothread.cpp
